--- a/StopBy/app/src/main/res/layout/activity_main.xml
+++ b/StopBy/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rachel.test.MainActivity">
+    tools:context="com.squad.stopby.Menu">
 
     <RelativeLayout
         android:layout_width="match_parent"
