Post page added, needs features added

--- a/StopBy/app/src/main/res/layout/activity_menu.xml
+++ b/StopBy/app/src/main/res/layout/activity_menu.xml
@@ -25,7 +25,7 @@
             android:layout_above="@+id/search"
             android:layout_alignStart="@+id/search"
             android:layout_marginBottom="14dp"
-            android:onClick="search"
+            android:onClick="post"
             android:text="@string/post" />
 
         <Button
