--- a/StopBy/app/src/main/res/layout/activity_main.xml
+++ b/StopBy/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,11 @@
             android:layout_marginTop="144dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/username" />
+            android:hint="@string/username"
+            />
+
+        <!-- android:text="@string/username"  -->
+
 
         <EditText
             android:id="@+id/password"
@@ -30,7 +34,8 @@
             android:layout_marginTop="13dp"
             android:ems="10"
             android:inputType="textPassword"
-            android:text="@string/password"/>
+            android:hint="Password"
+            />
 
         <Button
             android:id="@+id/login"
