--- a/StopBy/app/src/main/res/layout/activity_main.xml
+++ b/StopBy/app/src/main/res/layout/activity_main.xml
@@ -21,17 +21,18 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            app:srcCompat="@drawable/StopByLogo" />
+            android:contentDescription="Main logo"
+            app:srcCompat="@drawable/stopby_logo" />
 
         <EditText
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView2"
-            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/password"
+            android:layout_alignStart="@+id/password"
             android:ems="10"
             android:hint="@string/username"
             android:inputType="textPersonName" />
@@ -43,9 +44,8 @@
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/username"
-            android:layout_below="@+id/username"
-            android:layout_marginTop="13dp"
+            android:layout_above="@+id/login"
+            android:layout_centerHorizontal="true"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword" />
@@ -54,9 +54,9 @@
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="81dp"
             android:onClick="login"
             android:text="@string/login" />
 
