--- a/StopBy/app/src/main/res/values/colors.xml
+++ b/StopBy/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#fff</color>
+    <color name="bluelight">#45acd5</color>
+    <color name="green">#45bc62</color>
+    <color name= "orange">#eaad43</color>
+
 </resources>
