1. add chat room 2. users are able to upload profile image and change their usernames and interests 3. group the posts that are in the same location together and present them in a list

--- a/StopBy/app/src/main/res/layout/activity_accsetting.xml
+++ b/StopBy/app/src/main/res/layout/activity_accsetting.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.squad.stopby.ProfileActivity">
+    tools:context="com.squad.stopby.AccSettingActivity">
+
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/chat_profileImg"
@@ -13,18 +14,18 @@
         android:layout_height="170dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="33dp"
         android:src="@drawable/default1"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
     <TextView
-        android:id="@+id/profile_name"
+        android:id="@+id/accSetting_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/chat_profileImg"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="45dp"
         android:padding="5dp"
         android:text="Dummy"
         android:textColor="@android:color/black"
@@ -32,26 +33,38 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/profile_interest"
+        android:id="@+id/accSetting_interest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_name"
+        android:layout_below="@+id/accSetting_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="25dp"
         android:padding="5dp"
-        android:text="I like sleeping"
+        android:text="Lebron James"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/chatBtn"
+        android:id="@+id/accSetting_changeImgBtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_interest"
+        android:layout_above="@+id/accSetting_changeTextBtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginBottom="22dp"
         android:background="@drawable/startup_button_background"
-        android:text="@string/chatBtn"
+        android:text="@string/accSetting_changeImg"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/accSetting_changeTextBtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/accSetting_changeImgBtn"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/startup_button_background"
+        android:text="@string/accSetting_changetext"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
