--- a/StopBy/app/src/main/res/menu/main_menu.xml
+++ b/StopBy/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/main_accSetting"
+        android:title="@string/main_userProfile" />
+    <item
         android:id="@+id/main_signout"
         android:title="@string/main_logout" />
 </menu>
