--- a/StopBy/app/src/main/res/values/colors.xml
+++ b/StopBy/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4d74a6</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#673bb7</color>
     <color name="white">#fff</color>
     <color name="bluelight">#45acd5</color>
     <color name="green">#45bc62</color>
     <color name= "orange">#eaad43</color>
+
 
 </resources>
