I added code for the other three set locations which are Davis, Lockwood, and SU.

--- a/StopBy/app/src/main/res/layout/activity_available_posts_davis.xml
+++ b/StopBy/app/src/main/res/layout/activity_available_posts_davis.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.squad.stopby.AvailablePostsCapenActivity">
+    tools:context="com.squad.stopby.AvailablePostsDavisActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/su_posts_toolbar"
@@ -21,4 +21,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/su_posts_toolbar"> </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
