a couple more changes to the UI

--- a/StopBy/app/src/main/res/layout/activity_post.xml
+++ b/StopBy/app/src/main/res/layout/activity_post.xml
@@ -9,14 +9,16 @@
 
     <EditText
         android:id="@+id/post_messageField"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="104dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
         android:hint="@string/message"
+        android:background="@color/white"
         android:inputType="textCapSentences"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/postbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -45,6 +47,8 @@
         android:layout_marginEnd="60dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="88dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/post_messageField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
