Text Limits added to User Info, and Display Name
Signed-off-by: Iman Abdul-Rashed <ihabdulr@buffalo.edu>

--- a/StopBy/app/src/main/res/layout/activity_profile_change.xml
+++ b/StopBy/app/src/main/res/layout/activity_profile_change.xml
@@ -25,6 +25,7 @@
         android:layout_below="@+id/profileChange_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
+        android:maxLength="38"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
@@ -45,10 +46,14 @@
         android:layout_alignStart="@+id/change_username"
         android:layout_below="@+id/change_username"
         android:layout_marginBottom="36dp"
+        android:textAlignment="center"
+        android:maxLength="225"
+        android:maxLines="5"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:scrollHorizontally="false"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/change_submitBtn"
         app:layout_constraintEnd_toEndOf="parent"
