--- a/StopBy/app/src/main/res/layout/activity_registration.xml
+++ b/StopBy/app/src/main/res/layout/activity_registration.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
+        android:maxLength="38"
         android:hint="@string/register_username"
         android:inputType="textPersonName"
         android:textSize="20sp"
