--- a/StopBy/app/src/main/res/layout/activity_profile.xml
+++ b/StopBy/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
     tools:context="com.squad.stopby.ProfileActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/chat_profileImg"
+        android:id="@+id/chatroom_profileImg"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_alignParentTop="true"
@@ -22,7 +22,7 @@
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_profileImg"
+        android:layout_below="@+id/chatroom_profileImg"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:padding="5dp"
