--- a/StopBy/app/src/main/res/layout/available_posts_location_layout.xml
+++ b/StopBy/app/src/main/res/layout/available_posts_location_layout.xml
@@ -7,7 +7,7 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/chat_profileImg"
+        android:id="@+id/chatroom_profileImg"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_alignParentStart="true"
@@ -20,9 +20,9 @@
         android:id="@+id/poster_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/chat_profileImg"
+        android:layout_alignTop="@+id/chatroom_profileImg"
         android:layout_marginStart="18dp"
-        android:layout_toEndOf="@+id/chat_profileImg"
+        android:layout_toEndOf="@+id/chatroom_profileImg"
         android:text="dummy"
         android:textColor="@android:color/black"
         android:textSize="20sp"
