--- a/StopBy/app/src/main/res/layout/chatroom_background_layout.xml
+++ b/StopBy/app/src/main/res/layout/chatroom_background_layout.xml
@@ -10,19 +10,20 @@
         android:layout_height="65dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/default1" />
+        android:src="@drawable/default1"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp" />
 
     <TextView
-        android:id="@+id/chat_msg"
+        android:id="@+id/chatroom_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="15dp"
-        android:layout_toEndOf="@+id/chatroom_profileImg"
-        android:background="@drawable/chatbar_background"
-        android:padding="15dp"
-        android:text="What's good"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/chatroom_profileImg"
+        android:text="Dummy"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
