--- a/StopBy/app/src/main/res/layout/popup_window.xml
+++ b/StopBy/app/src/main/res/layout/popup_window.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="475dp"
     android:layout_gravity="center"
@@ -87,13 +88,14 @@
                 android:id="@+id/user_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:backgroundTint="@color/colorPrimaryDark"
+                android:background="?attr/colorAccent"
+                android:backgroundTint="?attr/colorAccent"
                 android:text='I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food.I enjoy family, wisdown, knowledge, and food." '
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textStyle="italic"
-                android:typeface="sans" />
+                android:typeface="sans"
+                tools:backgroundTint="FFFFFF" />
         </LinearLayout>
     </LinearLayout>
 <!--
