--- a/StopBy/app/src/main/res/layout/popup_window.xml
+++ b/StopBy/app/src/main/res/layout/popup_window.xml
@@ -35,7 +35,7 @@
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/user_image"
             android:layout_width="170dp"
-            android:layout_height="170dp"
+            android:layout_height="88dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
@@ -98,17 +98,17 @@
                 tools:backgroundTint="FFFFFF" />
         </LinearLayout>
     </LinearLayout>
-<!--
+
     <Button
         android:id="@+id/btnMessage"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:background="@drawable/buttonstyle"
-        android:text="@string/profile_messageBtn"
+        android:text="@string/chatBtn"
         android:textColor="@color/white" />
-    -->
+
 
 </LinearLayout>
