--- a/StopBy/app/src/main/res/layout/activity_menu.xml
+++ b/StopBy/app/src/main/res/layout/activity_menu.xml
@@ -11,10 +11,10 @@
         android:id="@+id/menu_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <Button
         android:id="@+id/menu_postBtn"
@@ -25,9 +25,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/startup_button_background"
+        android:text="@string/menu_postBtn"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:text="@string/menu_postBtn"
         app:layout_constraintBottom_toTopOf="@+id/menu_searchBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
