--- a/StopBy/app/src/main/res/layout/activity_post.xml
+++ b/StopBy/app/src/main/res/layout/activity_post.xml
@@ -7,6 +7,15 @@
     android:background="@color/colorPrimary"
     tools:context="com.squad.stopby.Post">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/post_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:visibility="visible"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <EditText
         android:id="@+id/post_messageField"
         android:layout_width="300dp"
