--- a/StopBy/app/src/main/res/layout/activity_profile.xml
+++ b/StopBy/app/src/main/res/layout/activity_profile.xml
@@ -7,13 +7,21 @@
     android:background="@color/colorPrimary"
     tools:context="com.squad.stopby.ProfileActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/profile_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:visibility="visible"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/chatroom_profileImg"
         android:layout_width="170dp"
         android:layout_height="170dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/profile_toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
         android:src="@drawable/default1"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
