--- a/StopBy/app/src/main/res/layout/single_message_background_layout.xml
+++ b/StopBy/app/src/main/res/layout/single_message_background_layout.xml
@@ -16,13 +16,23 @@
         android:id="@+id/chat_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="15dp"
+        android:layout_below="@+id/chat_username"
+        android:layout_marginLeft="15dp"
         android:layout_toEndOf="@+id/chatroom_profileImg"
-        android:background="@drawable/chatbar_background"
+        android:background="@drawable/chat_textview_background_layout"
         android:padding="15dp"
         android:text="What's good"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/chat_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="17dp"
+        android:layout_toEndOf="@+id/chatroom_profileImg"
+        android:text="TextView" />
 
 </RelativeLayout>
