--- a/StopBy/app/src/main/res/layout/activity_post.xml
+++ b/StopBy/app/src/main/res/layout/activity_post.xml
@@ -20,30 +20,30 @@
         android:id="@+id/post_messageField"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="68dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:background="@color/white"
         android:ems="10"
         android:hint="@string/message"
-        android:background="@color/white"
         android:inputType="textMultiLine"
-        android:maxLines="10"
         android:maxLength="500"
+        android:maxLines="1"
+        android:padding="5dp"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/postbtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/postbtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="88dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/postButton"
         android:background="@drawable/startup_button_background"
+        android:text="@string/postButton"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,11 +52,11 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="250dp"
-        android:layout_height="22dp"
+        android:layout_width="300dp"
+        android:layout_height="33dp"
         android:layout_marginBottom="140dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="88dp"
         android:background="@android:color/white"
         android:textColor="@android:color/black"
@@ -78,8 +78,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.166" />
 
     <Button
         android:id="@+id/deactivate_post"
